added additional information for user and group, changed user validation pattern. more details: https://github.com/openforis/users/issues/1, https://github.com/openforis/users/issues/2, https://github.com/openforis/users/issues/3
